syntax = "proto3";
option java_package = "com.game.protoGen";
option go_package = "/protoGen";

message HeartBeatPush{

}
message HeartBeatNtf{
  int64  serverTime = 1;
}
message ItemProto{
  int32 itemId = 1;
  int32 count = 2;
}

//================================  game login  to get player all game data=========
message GameLoginPush{
  int64  uid  = 1;
  string  gameToken = 2;
}

message  GameLoginNtf{
  int64  uid = 1;
  int64 serverTime = 2; // 服务器当前时间 MS
}

message LogoutRequest {
  int64  uid = 1;
}

message LogoutRes {
  int32 errorCode = 1;
}


//-----------------测试用
message  PerformanceTestReq{
  int64 someId = 1;
  string someBody = 2;
  int64 sendTime = 3;
}

message PerformanceTestRes{
  int64  someId = 1;
  string resBody = 2;
  int64  someIdAdd = 3;
  int64  sendTime = 4;
}

message  DirectToWorldReq{
  int64  someId = 1;
  string resBody = 2;
  int64  someIdAdd = 3;
}

message  DirectToWorldRes{
  int64  someId = 1;
  string resBody = 2;
  int64  someIdAdd = 3;
}